# coinglass-api

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: api_unitests.yml
coinglass_api/: __init__.py  api.py  exceptions.py  parameter_validation.py  parameters.py
examples/: quickstart.py
tests/: test_api.py  test_exceptions.py  test_index_endpoint.py  test_indicator_endpoint.py
