[tool.poetry]
name = "coinglass-api"
version = "1.3.0"
repository = "https://github.com/dineshpinto/coinglass-api"
homepage = "https://github.com/dineshpinto/coinglass-api"
license = "MIT"
keywords = ["coinglass", "api", "crypto", "cryptocurrency", "bitcoin", "ethereum", "binance", "dydx", "okex"]
description = "Unofficial Python client for Coinglass API"
authors = ["dineshpinto <annual.fallout_0z@gmail.com>"]
readme = "README.md"
packages = [{ include = "coinglass_api" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
requests = "^2.28.2"
pyzmq = "^25.1.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.2"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
ruff = "^0.0.290"
ruff-lsp = "^0.0.39"


[tool.poetry.group.test.dependencies]
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I", # isort
    "N", # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
]